**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES:

* F needed in gam object?

* still not really happy with nesting constraints, especially under rank
  deficiency.


1.7-20

* '...' now passd to termplot by plot.gam (thanks Andreas Eckner).

* fix to null deviance computation for binomial when n>1, matrix response 
  used and an offset is present. (Thanks to Tim Miller)

* Some pruning of unused code from recov and reTest.

* recov modified to stop it returning a numerically non-symmetric Ve, and 
  causing occasional failures of summary.gam with "re" terms.

* MRF smooth bug. Region ordering could become confused under some 
  circumstances due to incorrect setting of factor levels. Corrected 
  thanks to detailed bug report from Andreas Bender.

* polys.plot colour/grey scale bug. Could ask for colour 0 from colour 
  scheme, and therefore fail. Fixed.

1.7-19

** summary.gam and anova.gam now use an improved p-value computation for 
  smooth terms with a zero dimensional penalty null space (including 
  random effects). The new scheme has been tested by full replication 
  of the simulation study in Scheipl (2008,CSDA) to compare it to the best 
  method there-in. In these tests it is at least as powerful as the best 
  method given there, and usually indistinguishable, but it gives slightly 
  too low null p-values when smoothing parameters are very poorly identified. 
  Note that the new p-values can not be computed from old fitted gam objects.
  Thanks to Martijn Wieling for pointing out how bad the p-values for regular
  smooths could be with random effects.

* t2 terms now take an argument `ord' that allows orders of interaction to 
  be selected.

* "tp" smooths can now drop the null space from their construction via
  a vector m argument, to allow testing against polynomial in the null space.

* Fix of vicious little bug in gamm tensor product handling that could have 